# fatcat

./: .gitignore  .travis.yml  CMakeLists.txt  FatBackup.cpp  FatBackup.h  FatChain.cpp  FatChain.h  FatChains.cpp  FatChains.h  FatDiff.cpp  FatEntry.cpp  FatEntry.h  FatFilename.cpp  FatFilename.h  FatModule.cpp  FatModule.h  FatPath.cpp  FatPath.h  FatSystem.cpp  FatSystem.h  README.md  build.bat  build.sh  fat.c  fat.h  main.c  main.cpp  phpunit.xml  utils.h
debian/: .gitignore  changelog  control  copyright  deb.sh  fatcat.manpages  files  manpage.1  rules  watch
docs/: disk.md  fat.md  fun-with-fat.md  index.md  orphan.md  partition.md  repair.md  undelete.md
man/: fatcat.1
src/: FatBackup.h  FatChain.h  FatChains.cpp  FatChains.h  FatDate.cpp  FatDiff.cpp  FatDiff.h  FatEntry.cpp  FatEntry.h  FatFilename.cpp  FatFix.h  FatPath.cpp  FatSearch.cpp  FatSearch.h  FatSystem.cpp  FatSystem.h  FatUtils.h  FatWalk.cpp  FatWalk.h  README.md  fatcat.cpp  main.cpp
src/analysis/: FatChain.cpp  FatChains.cpp  FatChains.h  FatExtract.cpp  FatExtract.h  FatFix.cpp  FatFix.h  FatSearch.cpp  FatSearch.h  FatWalk.cpp  FatWalk.h
src/core/: FatDate.cpp  FatDate.h  FatEntry.cpp  FatEntry.h  FatFilename.cpp  FatPath.cpp  FatPath.h  FatSystem.cpp  FatSystem.h  OutputFormatType.h  OutputType.h
src/mingw/: argp.h  utimes.cpp  utimes.h
src/table/: FatBackup.cpp  FatBackup.h  FatDiff.cpp  FatDiff.h
src/xgetopt/: argcargv.cpp  argcargv.h  stdafx.cpp  stdafx.h  xgetopt.cpp  xgetopt.h
tests/: FatcatTests.php  bootstrap.php
